# PixelCNN

./: .gitignore  README.md  detection.ipynb  pixelcnn.ipynb  pyproject.toml  start_streamlit.py  train.py
Gated PixelCNN conditional/: checkpoint.py  condition.py  fonctions_train.py  gated_pixelcnn.py  main_CIFAR.py  masked.py  sample.py  train_CIFAR10.py  train_MNISTFashion.py  visualise_CIFAR.py  visualize.py
src/: datasets.py  generation.py  pixelcnn.py
src/app/: main.py
src/app/app CIFAR10/: app_conditional.py
src/app/app MNIST Fashion/: app_conditional.py
src/app/app MNIST Fashion/checkpoints/: pixelcnn_fashion_best-2.pth  pixelcnn_fashion_latest-2.pth
src/app/canvas/: MANIFEST.in  setup.py
src/app/canvas/bitcanvas/: __init__.py
src/app/canvas/bitcanvas/frontend/: package-lock.json  package.json
src/app/canvas/bitcanvas/frontend/public/: index.html
src/app/canvas/bitcanvas/frontend/src/: canvas.ts  index.tsx
src/app/canvas/streamlit_bit_canvas.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
