[project]
name = "pixelcnn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipympl>=0.9.7",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.1",
    "streamlit>=1.43.2",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
]
